# MapSatisfyBench

./: .env  .gitignore  LICENSE  README.md  amap-eval-service.release  pyproject.toml  pyrightconfig.json
app/: __main__.py  config.py  diamond.py  main.py  paths.py
app/api/: main.py
app/api/routes/: evaluate.py  health.py  pipeline.py  simulator.py
app/cli/: dialogue_simulator.py  evaluate.py  test_tools.py
app/core/evaluation/: __init__.py  conversation_data_normalizer.py  ecr_judge.py  evaluator.py  explainer.py  ifs_judge.py  iisr_judge.py  judge_agent.py  schema.py  (+6 more)
app/lifecycle/: manager.py
app/schemas/: batch_evaluate.py  dialogue_simulator.py  evaluate_schemas.py
app/scripts/: aggregate_eval_results.py  batch_eval_all_simulator_runs.py  batch_evaluate_from_simulator.py  compare_eval_results.py  run_pipeline.py
app/services/: batch_runner.py  dialogue_recorder.py  ensemble_evaluate_service.py  eval_compare_service.py  eval_summary_service.py  evaluate_service.py  excel_parser.py  pipeline_task.py  run_sandbox.py  user_simulator_factory.py
app/static/: chat.html
conf/: circus.ini
data/inputs/: demo_bench.xlsx
scripts/: curl_evaluate_case.sh  generate_eval_sh.py  merge_csv_results_by_case.py  mock_eval_cases.py  run_compare_report_500_run1.py  run_eval_matrix.py  run_grouped_meta_report.py  run_tool_call_freq_per_model.py  run_tool_call_freq_report.py
tests/: test_anthropic_chat.py  test_anthropic_content_normalize.py  test_anthropic_e2e_smoke.py  test_invalid_tool_calls_retry.py  test_thinking_policy.py  test_user_simulator_temperature.py
(+89 files in other folders)
