[project]
name = "amap-eval-service"
version = "0.1.0"
description = "Agent based on Aone"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "circus==0.19.0",
    "uvicorn[standard]==0.34.3",
    "openai==1.68.2", #openai>1.73.0后，ideadTask接口流式调用有bug，因为object字段没有返回
    "langchain-community==0.3.26",
    "langchain-experimental==0.3.4",
    "langchain-openai==0.3.23",
    "langgraph==0.4.8",
    "python-dotenv==1.0.1",
    "fastapi==0.115.13",
    "sse-starlette==2.1.3",
    "langchain-mcp-adapters==0.1.9",
    "diamond-client",
    "sunfire-sdk",
    "eveye-python-sdk",
    "loguru",
    "httpx>=0.27",
    "openpyxl==3.1.5",
    "pyyaml>=6.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "langchain-anthropic>=0.3.22",
]

# uv 配置
[tool.uv]
# 主要索引源
index-url = "https://artlab.alibaba-inc.com/1/pypi/simple"
